<resources>
    <string name="app_name">groupProject</string>
    <string name="grid">grid</string>
    <string name="score">Score: %d</string>
    <string name="new_game_button_text">New Game</string>
    <string name="how_to_play">The goal of this game is to combine similar numbers together to make higher numbers. Swipe or use the D-Pad to move numbers around and combine them. A new number will appear when you move the board. Try to get to 2048 before the board fills up!</string>
    <string name="game_menu_title">Game</string>
    <string name="how_to_play_menu_title">How to Play</string>
    <string name="leaderboard_menu_title">Leaderboard</string>
    <string name="options_menu_title">Options</string>
    <string name="show_directional_buttons">Show Directional Buttons</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="keep_playing">Continue</string>
    <string name="name_entry">Enter Your Name</string>
    <string name="game_over">GAME OVER</string>
    <string name="no_scores_yet">No Scores Available Yet</string>
    <string name="choose_mode">Choose Color Mode</string>
    <string name="light_option">Light</string>
    <string name="dark_option">Dark</string>
</resources>