<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/youwin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/game_over" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="30sp"
        android:hint="@string/name_entry"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@id/winScreenPopupContinue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/winScreenPopupContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/keep_playing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageView"/>

    <Button
        android:id="@+id/winScreenPopupReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/reset"

        app:layout_constraintRight_toLeftOf="@id/winScreenPopupContinue"
        app:layout_constraintBottom_toBottomOf="@id/imageView"/>

    <Button
        android:id="@+id/winScreenPopupQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/quit"

        app:layout_constraintLeft_toRightOf="@id/winScreenPopupContinue"
        app:layout_constraintBottom_toBottomOf="@id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>
