<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Options">

    <TextView
        android:id="@+id/optionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/options_menu_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/darkModeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/optionHeader"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/choose_mode"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/darkModeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/darkModeHeader"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/darkModeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/light_option" />

        <RadioButton
            android:id="@+id/darkModeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/dark_option" />

    </RadioGroup>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</RelativeLayout>